--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
         <!--Personas-->
         <div id = "personas" class = "container-fluid">
-            <div class = "row">
+            <div class = "row text-center justify-content-center">
                 <h2>Personas</h2>
                 <div class = "col-6">
                     <p style = "font-size:1.5rem">Persona 1: Eva Gormet</p>
@@ -105,42 +105,43 @@
         </div>
 
         <!--Storyboard-->
-        <div id = "storyboard" class = "container-fluid">
-            <div class = "row">
+        <div id = "storyboard" class = "container-fluid"  style = "background-color: brown;">
+            <div class = "row text-center justify-content-center">
                 <h2>Storyboard</h2>
-                <div class = "col-6 col-md-4">
+
+                <div class = "col-6 col-md-4 col-sm-6">
                     <img src="img/frame-1.png" alt = "frame 1" class="frame" style = "width:25rem">
                     <p style = "font-size:1rem">Eva discovers a coffee machine in CIT and wants to get some coffee from it. </p>
                 </div>
-                <div class = "col-6 col-md-4">
+                <div class = "col-6 col-md-4 col-sm-6">
                     <img src="img/frame-2.png" alt = "frame 2" class="frame" style = "width:25rem">
                     <p style = "font-size:1rem">She has never used the machine before and is not sure how it works.</p>
                 </div>
-                <div class = "col-6 col-md-4">
+                <div class = "col-6 col-md-4 col-sm-6">
                     <img src="img/frame-3.png" alt = "frame 3" class="frame" style = "width:25rem">
                     <p style = "font-size:1rem">Another graduate student who was near Eva tells her that the machine works with coffee pods.</p>
                 </div>
-                <div class = "col-6 col-md-4">
+                <div class = "col-6 col-md-4 col-sm-6">
                     <img src="img/frame-4.png" alt = "frame 4" class="frame" style = "width:25rem">
                     <p style = "font-size:1rem">Eva finds a coffee pod and tries to figure out where to put in the pod. She tries pressing the "Open" button.</p>
                 </div>
-                <div class = "col-6 col-md-4">
+                <div class = "col-6 col-md-4 col-sm-6">
                     <img src="img/frame-5.png" alt = "frame 5" class="frame" style = "width:25rem">
                     <p style = "font-size:1rem">Pressing the "Open" button opens the pod compartment.</p>
                 </div>
-                <div class = "col-6 col-md-4">
+                <div class = "col-6 col-md-4 col-sm-6">
                     <img src="img/frame-6.png" alt = "frame 6" class="frame" style = "width:25rem">
                     <p style = "font-size:1rem">Eva puts in her coffee pod but realizes that it's upside down.</p>
                 </div>
-                <div class = "col-6 col-md-4">
+                <div class = "col-6 col-md-4 col-sm-6">
                     <img src="img/frame-7.png" alt = "frame 7" class="frame" style = "width:25rem">
                     <p style = "font-size:1rem">Eva closes the pod compartment with hand and sees the warning message under it telling her not to do so. She hopes she didn't break the machine.</p>
                 </div>
-                <div class = "col-6 col-md-4">
+                <div class = "col-6 col-md-4 col-sm-6">
                     <img src="img/frame-8.png" alt = "frame 8" class="frame" style = "width:25rem">
                     <p style = "font-size:1rem">Eva isn't sure what exactly "Mild", "Medium", and "Strong" settings mean. She tries pressing "Medium".</p>
                 </div>
-                <div class = "col-6 col-md-4">
+                <div class = "col-6 col-md-4 col-sm-6">
                     <img src="img/frame-9.png" alt = "frame 9" class="frame" style = "width:25rem">
                     <p style = "font-size:1rem">Eva drinks the coffee the machine made. She hates the coffee.</p>
                 </div>
