--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
         <!--Main page-->
         <div class = "d-flex flex-column justify-content-center align-items-center coffee_cup">
             <!-- <img src = "img/coffee.jpg" alt = "coffee cup image">  -->
-            <h1 class = "display-1 text-dark" style = "opacity:1;">CIT Coffee Machine</h1>
+            <h1 class = "display-1 text-light">CIT Coffee Machine</h1>
+            <h3 class = "text-light">In this project, I explored ways in which users interacted with a coffee machine 
+                in Brown's Center for Information Technology (CIT) through three user interviews. 
+                Based on my findings, I created personas and storyboard reflecting the users' experiences of 
+                making coffee with the machine.</h3>
         </div>
 
 
@@ -34,6 +38,8 @@
         <div id = "interface" class = "container-fluid section">
             <div class ="row text-center justify-content-center">
                 <h2>Coffee Machine Sketch and Descriptions</h2>
+                <p style = "font-size:1.5rem; padding-left:50px; padding-right:50px;">Below are a sketch of the CIT coffee machine and descriptions about each of its numbered parts. 
+                    The machine uses "coffee pods" (sealed bags containing ground coffee) to brew coffee.</p>
                 <div class = "col-6">
                     <h2 style="font-size:1.5rem">Coffee Machine Sketch</h2>
                     <img src = "img/Annotation.png" alt = "coffee machine annotation" style = "width:30rem" class = "annotation">
@@ -43,12 +49,12 @@
                     <div class = "description">
                         <ol>
                             <li>The user can open the pod compartment (7) by pressing this button.</li>
-                            <li>This display gives directions to users at different steps of coffee making.</li>
+                            <li>This display gives directions to the user during different steps of coffee making.</li>
                             <li>The user can press this button to get hot water instead of coffee.</li>
                             <li>Pressing this button brews espresso.</li>
                             <li>By pressing one of these three buttons, the user can set the strength of their coffee. Given the same amount of ground coffee, the “Mild” setting dilutes the coffee more with water than the “Bold” setting does.</li>   
                             <li>Pressing this button brews iced coffee. By default, the machine brews hot coffee.</li>
-                            <li>This compartment opens when the user presses the “Open” button. Inside the compartment, there`s a tray where the user can place a pod.</li>
+                            <li>This compartment opens when the user presses the “Open” button. Inside the compartment, there's a tray where the user can place a coffee pod.</li>
                             <li>This dispenses coffee.</li>
                             <li>This compartment contains used coffee pods. The user can open it to dispose the pods.</li>
                             <li>This is where the user places their cup.</li>
@@ -62,16 +68,16 @@
         <div id = "observations" class = "container-fluid section">
             <h2 class = "text-center">Observations</h2>
             <div class = "row text-center justify-content-center content">
-                <p style = "font-size:1.5rem">I interviewed 3 users about the coffee machine in CIT on the 4th floor. 
+                <p style = "font-size:1.5rem">I interviewed three users about the CIT coffee machine. 
                     All three users were graduate students at Brown and drank coffee on a daily basis. 
-                    Although two out of the three users had never used the coffee machine before, 
+                    Although two out of the three users had never used the coffee machine before the interview, 
                     all three of them had made coffee using their own tools. 
                 </p>
                 <div class = "col-6 description">
                     <p style = "font-size:1.5rem">Questions</p>
                     <ul>
                         <li>Have you used this coffee machine before?</li>
-                        <li>What do you use to make your coffee (e.g., french press, espresso machine)?</li>
+                        <li>What tools have you used to make your coffee (e.g., french press, espresso machine)?</li>
                         <li>What are pros and cons of making coffee with this machine as opposed to using other methods you've used to make your coffee?</li>
                         <li>What are things you like and dislike about the UI design of this coffee machine?</li>
                         <li>What are satisfactory and unsatisfactory qualities of coffee made from this machine?</li>
@@ -80,7 +86,7 @@
                 <div class = "col-6 description">
                     <p style="font-size:1.5rem">Summary</p>
                     <ul>
-                        <li>All three users use non-automatic ways to make coffee such as french press and instant coffee powder when they are not in CIT. They liked that the machine made coffee more quickly than the methods they used.</li>
+                        <li>All three users use non-automatic ways to make coffee such as french press and instant coffee powder when they are not in CIT. They liked that the machine in CIT made coffee more quickly than the tools they used.</li>
                         <li>The two new users said they could not initially figure out that the machine made coffee with pods that were stored in shelves above the machine. They also said they had trouble figuring out how to open the pod compartment.</li>
                         <li>The two new users pushed the pod compartment with their hand to close it despite the warning message under the compartment telling them not to do so.</li>
                         <li>Two out of the three users said the coffee that the machine made was too acidic or smelled unpleasant.</li>
@@ -96,13 +102,13 @@
             <div class = "row text-center justify-content-center content">
                 <h2>Personas</h2>
                 <div class = "col-6">
-                    <p style = "font-size:1.5rem">Persona 1: Eva Gormet</p>
-                    <p style = "font-size:1rem">Eva is a first-year masters student who has never used the CIT coffee machine and is picky about how her coffee tastes and smells.</p>
+                    <p style = "font-size:1.5rem">Persona 1: Eva Gourmet</p>
+                    <p style = "font-size:1rem">Eva is a first-year masters student who has never used the CIT coffee machine and wants to drink coffee that tastes and smells nice.</p>
                     <img src="img/Persona_1.png" alt = "persona 1" style = "width:30rem" class = "persona">
                 </div>
                 <div class = "col-6">
                     <p style = "font-size:1.5rem">Persona 2: Jane Goodcoffee</p>
-                    <p style = "font-size:1rem">Jane is a second-year PhD student who uses the coffee machine on a daily basis although she doesn`t like the taste and smell of its coffee.</p>
+                    <p style = "font-size:1rem">Jane is a second-year PhD student who drinks coffee from the machine on a daily basis, although she doesn't like its coffee and wants to find ways to make the coffee taste better.</p>
                     <img src="img/Persona_2.png" alt = "persona 2" style = "width:30rem"  class = "persona">
                 </div>
             </div>
@@ -121,7 +127,7 @@
                 <p style = "font-size:1.5rem">This storyboard shows Eva's experience of making coffee with the CIT coffee machine.</p>
                 <div class = "col-6 col-md-4 col-sm-6">
                     <img src="img/frame-1.png" alt = "frame 1" class="frame" style = "width:25rem">
-                    <p style = "font-size:1rem">1. Eva discovers a coffee machine in CIT and wants to get some coffee from it. </p>
+                    <p style = "font-size:1rem">1. Eva discovers a coffee machine in CIT and wants to try some coffee from it. </p>
                 </div>
                 <div class = "col-6 col-md-4 col-sm-6">
                     <img src="img/frame-2.png" alt = "frame 2" class="frame" style = "width:25rem">
@@ -145,7 +151,7 @@
                 </div>
                 <div class = "col-6 col-md-4 col-sm-6">
                     <img src="img/frame-7.png" alt = "frame 7" class="frame" style = "width:25rem">
-                    <p style = "font-size:1rem">7. Eva closes the pod compartment with hand and sees the warning message under it telling her not to do so. She hopes she didn't break the machine.</p>
+                    <p style = "font-size:1rem">7. Eva closes the pod compartment with hand and later sees the warning message under it telling her not to do so. She hopes she didn't break the machine.</p>
                 </div>
                 <div class = "col-6 col-md-4 col-sm-6">
                     <img src="img/frame-8.png" alt = "frame 8" class="frame" style = "width:25rem">
