ordered question list added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class ="row text-center justify-content-center">
                 <h2>Coffee Machine Sketch and Descriptions</h2>
                 <p style = "font-size:1.5rem; padding-left:50px; padding-right:50px;">Below are a sketch of the CIT coffee machine and descriptions about each of its numbered parts. 
-                    The machine uses "coffee pods" (sealed bags containing ground coffee) to brew coffee.</p>
+                    The machine uses "coffee pods" (sealed bags containing ground coffee) to brew coffee based on settings that the user chose.</p>
                 <div class = "col-6">
                     <h2 style="font-size:1.5rem">Coffee Machine Sketch</h2>
                     <img src = "img/Annotation.png" alt = "coffee machine annotation" style = "width:30rem" class = "annotation">
@@ -75,22 +75,22 @@
                 </p>
                 <div class = "col-6 description">
                     <p style = "font-size:1.5rem">Questions</p>
-                    <ul>
-                        <li>Have you used this coffee machine before?</li>
+                    <ol>
+                        <li>Have you used this coffee machine before this interview?</li>
                         <li>What tools have you used to make your coffee (e.g., french press, espresso machine)?</li>
                         <li>What are pros and cons of making coffee with this machine as opposed to using other methods you've used to make your coffee?</li>
                         <li>What are things you like and dislike about the UI design of this coffee machine?</li>
                         <li>What are satisfactory and unsatisfactory qualities of coffee made from this machine?</li>
-                    </ul>
+                    </ol>
                 </div>
                 <div class = "col-6 description">
                     <p style="font-size:1.5rem">Summary</p>
                     <ul>
-                        <li>All three users use non-automatic ways to make coffee such as french press and instant coffee powder when they are not in CIT. They liked that the machine in CIT made coffee more quickly than the tools they used.</li>
-                        <li>The two new users said they could not initially figure out that the machine made coffee with pods that were stored in shelves above the machine. They also said they had trouble figuring out how to open the pod compartment.</li>
-                        <li>The two new users pushed the pod compartment with their hand to close it despite the warning message under the compartment telling them not to do so.</li>
-                        <li>Two out of the three users said the coffee that the machine made was too acidic or smelled unpleasant.</li>
-                        <li>All three users pointed out that the “Open” button for opening the pod compartment should stand out more from other buttons and clearly indicate whether it opens the pod compartment or the compostable bin.</li>
+                        <li>All three users use non-automatic ways to make coffee such as french press and instant coffee powder when they are not in CIT. They liked that the machine in CIT <b>made coffee more quickly than the tools they used.</b></li>
+                        <li>The two new users <b>could not initially figure out that the machine made coffee with pods</b> that were stored in shelves above the machine. They also said they had <b>trouble figuring out how to open the pod compartment.</b></li>
+                        <li>The two new users pushed the pod compartment with their hand to close it <b>despite the warning message under the compartment telling them not to do so.</b></li>
+                        <li>All three users pointed out that the <b>“Open” button for opening the pod compartment should stand out more</b> from other buttons and clearly indicate whether it opens the pod compartment or the compostable bin.</li>
+                        <li>Two out of the three users said the coffee that the machine made was <b>too acidic or smelled unpleasant.</b></li>
                     </ul>
                 </div>
             </div>
